# bias-detector

./: .gitignore  CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  QUICK_REFERENCE.md  README.md  build.sh  example.cpp  main.cpp  validate_outlets  validate_outlets.cpp
config/: mbfc_outlets.json  name_to_domain_mapping.json  outlets.json  validation_report.txt
include/: bias_aggregator.hpp  bias_signal.hpp  nlp_context.hpp  outlet_validator.hpp  preprocessor.hpp  types.hpp
include/signals/: emotional_direction_signal.hpp  entity_sentiment_signal.hpp  outlet_baseline_signal.hpp  policy_framing_signal.hpp  semantic_bias_signal.hpp
src/: bias_aggregator.cpp  nlp_context.cpp  outlet_validator.cpp  preprocessor.cpp
src/signals/: emotional_direction_signal.cpp  entity_sentiment_signal.cpp  outlet_baseline_signal.cpp  policy_framing_signal.cpp  semantic_bias_signal.cpp
tests/: CMakeLists.txt
