# Tests placeholder - ready for Google Test or Catch2 integration
# Example:
# find_package(GTest REQUIRED)
# add_executable(bias_detector_tests
#     test_nlp_context.cpp
#     test_signals.cpp
#     test_aggregator.cpp
# )
# target_link_libraries(bias_detector_tests PRIVATE bias_detector GTest::gtest GTest::gtest_main)
# add_test(NAME BiasDetectorTests COMMAND bias_detector_tests)

# For now, minimal placeholder
add_custom_target(tests_placeholder
    COMMENT "Tests placeholder - add Google Test or Catch2 when ready"
)
